Bug 500885 - DOMActivate is fired twice for input[type=file] if user clicks on browse button, r=Olli.Pettay sr=jonas